syntax = "proto3";

package com.sub.grpc;

// 온라인/오프라인/BOTH 구분
enum ChannelType {
  ONLINE = 0;
  OFFLINE = 1;
  BOTH = 2;
}

// 할인 혜택
message DiscountBenefit {
  int64 id = 6; // 변경 식별용 id 추가
  double rate = 1;           // 정률 할인 (0이면 null)
  double amount = 2;         // 정액 할인 (0이면 null)
  int64 minimum_amount = 3;  // 최소 결제 금액 (0이면 null)
  int64 benefit_limit = 4;   // 최대 혜택 한도 (0이면 null)
  ChannelType channel = 5;   // 온라인/오프라인/BOTH
}

// 포인트 적립 혜택
message PointBenefit {
  int64 id = 6; // 변경 식별용 id 추가
  double rate = 1;           // 적립률 (0이면 null)
  int64 minimum_amount = 2;  // 최소 결제 금액 (0이면 null)
  int64 benefit_limit = 3;   // 최대 혜택 한도 (0이면 null)
  ChannelType channel = 4;   // 온라인/오프라인/BOTH
}

// 캐시백 혜택
message CashbackBenefit {
  int64 id = 6; // 변경 식별용 id 추가
  double rate = 1;           // 캐시백률 (0이면 null)
  double amount = 2;         // 정액 캐시백 (0이면 null)
  int64 minimum_amount = 3;  // 최소 결제 금액 (0이면 null)
  int64 benefit_limit = 4;   // 최대 혜택 한도 (0이면 null)
  ChannelType channel = 5;   // 온라인/오프라인/BOTH
}

// 카드 단위
message Benefit {
  int64 benefit_id = 1;                    // 혜택 고유 ID (기존 혜택 식별용) -> 추가한 것 
  repeated DiscountBenefit discounts = 2;  // 할인 혜택 배열
  repeated PointBenefit points = 3;        // 포인트 혜택 배열
  repeated CashbackBenefit cashbacks = 4;  // 캐시백 혜택 배열
  repeated string applicable_category = 5; // 카카오맵 업종 코드 (MT1, FD6, CE7 ...)
  repeated string applicable_targets = 6;  // 브랜드명 또는 한글 설명
}

message CrawledBenefit {
  int64 card_id = 6; // 변경 식별용 id 추가
  string card_bank = 1; // 카드사
  string card_name = 2; //카드명
  string img_url = 3; //카드 이미지
  string type = 4; //CreditCard|DebitCard
  repeated Benefit benefits = 5; // 카드에 속한 여러 혜택
}

// 카드 여러 장 처리
message CrawledBenefitList {
  repeated CrawledBenefit crawledBenefit = 1;
}

// 응답 메시지
message CardSaveResponse {
  bool success = 1;
  string message = 2;
  int32 saved_count = 3;
}

// gRPC 서비스 정의
service CardDataService {
  rpc SaveCardData(CrawledBenefitList) returns (CardSaveResponse);
}